changes index.html and js

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="overlay"></div>
     <header class="flex justify-between align-center paddings">
       <div>
-        <a href="#"
+        <a href="#hero"
           ><p><span>B-G</span></p></a
         >
         <a href="#"
@@ -57,7 +57,7 @@
     </header>
 
     <!-- Section Hero -->
-    <div class="flex margin-top">
+    <div class="flex margin-top" id="hero">
       <div class="hero">
         <p>Je suis</p>
         <h1>
