--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="overlay"></div>
     <header class="flex justify-between align-center paddings">
       <div>
-        <a href="#hero"
+        <a href="#" id="accueil"
           ><p><span>B-G</span></p></a
         >
         <a href="#"
@@ -46,6 +46,7 @@
           <i class="fa-solid fa-xmark"></i>
         </div>
         <ul class="flex gap-30">
+          <li><a href="#accueil">Accueil</a></li>
           <li><a href="#apropos">À propos</a></li>
           <li><a href="#projet">Mes Projets</a></li>
           <li><a href="#contact">Contact</a></li>
