--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           ><p><span>B-G</span></p></a
         >
         <a href="#"
-          ><p><span>F-E</span></p></a
+          ><p><span>Dev</span></p></a
         >
         <div class="link-sociaux flex flex-column paddings gap-30">
           <a href="https://www.facebook.com/" target="_blank"
@@ -58,7 +58,7 @@
     </header>
 
     <!-- Section Hero -->
-    <div class="flex margin-top" id="hero">
+    <div class="flex margin-top">
       <div class="hero">
         <p>Je suis</p>
         <h1>
