--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
         <h2 class="text-center">Mes Projets</h2>
         <div class="row w1200 flex gap-30">
           <div class="card-ruche">
-            <a href="#">
+            <a href="https://belaid01500.github.io/LaRuche/">
               <div>
                 <img src="./images/La-ruche.png" alt="photo du site la ruche" />
               </div>
