--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
               <p>Figma</p>
               <p>Notion</p>
               <p>Visual Studio Code</p>
+              <p>Github</p>
             </div>
             <div class="card-apropos flex flex-column margin-bottom">
               <p class="margin-bottom">
@@ -147,67 +148,127 @@
             <div class="img-logo">
               <img src="./images/Sass.png" alt="logo Sass" />
             </div>
+            <div class="img-logo">
+              <img src="./images/github.png" alt="logo Github" />
+            </div>
           </div>
         </div>
       </section>
 
       <!-- Mes Projets -->
-      <section
-        class="project flex justify-center flex-column gap-30"
-        id="projet"
-      >
-        <h2 class="text-center">Mes Projets</h2>
-        <div class="row w1200 flex gap-30">
-          <div class="card-ruche">
-            <a href="https://belaid01500.github.io/LaRuche/" target="_blank">
-              <div>
-                <img src="./images/La-ruche.png" alt="photo du site la ruche" />
-              </div>
-            </a>
+      <section class="project w1200" id="projet">
+        <h2 class="text-center margin-bottom">Mes Projets</h2>
+        <div class="container w100">
+          <!-- Card La Ruche -->
+          <div class="card-project flex align-center justify-between">
+            <img src="./images/La-ruche.png" alt="photo du site La Ruche" />
+            <div class="card-des flex flex-column gap-30">
+              <h3>La Ruche</h3>
+              <p>
+                Le site La Ruche c'est un site vitrine qui parle des bienfaits
+                du miel.
+              </p>
+              <p>
+                Pour la réalisation de ce site ont a utilisé les langages HTML
+                et CSS
+              </p>
+              <p class="copyrigth">© Copyright La Ruche BG Dev</p>
+              <a href="https://belaid01500.github.io/LaRuche/" target="_blank"
+                >Voir le projet</a
+              >
+            </div>
           </div>
-          <div class="card-ruche">
-            <a href="#">
-              <div>
-                <img
-                  src="./images/Hotel-4-Élements.png"
-                  alt="photo du site la ruche"
-                />
-              </div>
-            </a>
+          <!-- Card Escape Game -->
+          <div class="card-project2 flex align-center justify-between">
+            <div class="card-des flex flex-column gap-30">
+              <h3>Escape Game</h3>
+              <p>
+                Escape Game est un site ou on peut reservez n'importe quel
+                avanture énigmatique entre amis sur Paris.
+              </p>
+              <p>
+                Pour la réalisation de ce site ont a utilisé les langages HTML,
+                CSS et JavaScript avec un Json{}.
+              </p>
+              <p class="copyrigth">© Copyright Escape Game BG Dev</p>
+              <a href="#">Voir le projet</a>
+            </div>
+            <img
+              src="./images/escape-game.png"
+              alt="photo du site Escape Game"
+            />
           </div>
-          <div class="card-ruche">
-            <a href="#">
-              <div>
-                <img
-                  src="./images/escape-game.png"
-                  alt="photo du site Escape-game"
-                />
-              </div>
-            </a>
+          <!-- Card Interno -->
+          <div class="card-project flex align-center justify-between">
+            <img src="./images/Interno.png" alt="photo du site Interno" />
+            <div class="card-des flex flex-column gap-30">
+              <h3>Interno</h3>
+              <p>
+                Interno est un site de meuble design pour votre interieur et
+                exterieur
+              </p>
+              <p>
+                Pour la réalisation de ce site ont a utilisé les langages HTML
+                et CSS
+              </p>
+              <p class="copyrigth">© Copyright Interno BG Dev</p>
+              <a href="#" target="_blank">Voir le projet</a>
+            </div>
           </div>
-          <div class="card-ruche">
-            <a href="#">
-              <div>
-                <img src="./images/mntp.png" alt="photo du site MNTP" />
-              </div>
-            </a>
+          <!-- Card Hôtel 4 Éléments -->
+          <div class="card-project2 flex align-center justify-between">
+            <div class="card-des flex flex-column gap-30">
+              <h3>Hôtel 4 Éléments</h3>
+              <p>
+                L'Hôtel 4 Éléments est un site de réservation d'hôtel atypique
+                et avec des thèmes plus surprenants que d'autres.
+              </p>
+              <p>
+                Pour la réalisation de ce site ont a utilisé les langages HTML,
+                CSS.
+              </p>
+              <p class="copyrigth">© Copyright Hôtel 4 Éléments BG Dev</p>
+              <a href="#">Voir le projet</a>
+            </div>
+            <img
+              src="./images/Hotel-4-Élements.png"
+              alt="photo de l'hôtel 4 éléments"
+            />
           </div>
-          <div class="card-ruche">
-            <a href="#">
-              <div>
-                <img src="./images/Interno.png" alt="photo du site Interno" />
-              </div>
-            </a>
+          <!-- Card MNTP -->
+          <div class="card-project flex align-center justify-between">
+            <img src="./images/mntp.png" alt="photo du site MNTP" />
+            <div class="card-des flex flex-column gap-30">
+              <h3>MNTP</h3>
+              <p>
+                MNTP est un site pour les amoureux de la montagne qui souhaites
+                acheter des equipements ou lire les derniers infos sur les
+                randonnées et autres.
+              </p>
+              <p>
+                Pour la réalisation de ce site ont a utilisé les langages HTML
+                et CSS
+              </p>
+              <p class="copyrigth">© Copyright MNTP BG Dev</p>
+              <a href="#" target="_blank">Voir le projet</a>
+            </div>
           </div>
-          <div class="card-ruche">
-            <a href="#">
-              <div>
-                <img
-                  src="./images/M'S Sportswear.png"
-                  alt="photo du site Interno"
-                />
-              </div>
-            </a>
+          <!-- Card M'S Sportswear -->
+          <div class="card-project2 flex align-center justify-between">
+            <div class="card-des flex flex-column gap-30">
+              <h3>M'S Sportswear</h3>
+              <p>Site de vêtements, chaussures et accessoires de sport.</p>
+              <p>
+                Pour la réalisation de ce site ont a utilisé les langages HTML,
+                CSS, et JavaScript avec un Json{}
+              </p>
+              <p class="copyrigth">© Copyright M'S Sportswear BG Dev</p>
+              <a href="#">Voir le projet</a>
+            </div>
+            <img
+              src="./images/M'S Sportswear.png"
+              alt="photo du site M'S Sportswear"
+            />
           </div>
         </div>
       </section>
