--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 
       <!-- Mes Projets -->
       <section class="project w1200" id="projet">
-        <h2 class="text-center margin-bottom">Mes Projets</h2>
+        <h2 class="text-center">Mes Projets</h2>
         <div class="container w100">
           <!-- Card La Ruche -->
           <div class="card-project flex align-center justify-between">
@@ -269,6 +269,26 @@
               src="./images/M'S Sportswear.png"
               alt="photo du site M'S Sportswear"
             />
+          </div>
+          <!-- Card Site Absurde -->
+          <div class="card-project flex align-center justify-between">
+            <img src="./images/Site-absurde.png" alt="photo du site absurde" />
+            <div class="card-des flex flex-column gap-30">
+              <h3>Inutilisphère.com</h3>
+              <p>
+                Site qui resense tout les sites absurdes et farfelus qui existe.
+              </p>
+              <p>
+                Pour la réalisation de ce site ont a utilisé les langages HTML
+                et CSS
+              </p>
+              <p class="copyrigth">© Copyright Inutilisphère.com BG Dev</p>
+              <a
+                href="https://belaid01500.github.io/Site-Absurde/"
+                target="_blank"
+                >Voir le projet</a
+              >
+            </div>
           </div>
         </div>
       </section>
