--- a/index.html
+++ b/index.html
@@ -11,6 +11,26 @@
       src="https://kit.fontawesome.com/c8bcc72f6d.js"
       crossorigin="anonymous"
     ></script>
+    <link
+      rel="apple-touch-icon"
+      sizes="76x76"
+      href="favicon/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="favicon/favicon-16x16.png"
+    />
+    <link rel="manifest" href="favicon/site.webmanifest" />
+    <meta name="msapplication-TileColor" content="#da532c" />
+    <meta name="theme-color" content="#ffffff" />
     <link rel="stylesheet" href="./node_modules/aos/dist/aos.css" />
     <link rel="stylesheet" href="./style.css" />
     <title>Portfolio Belaid Gherbi</title>
@@ -20,12 +40,9 @@
     <div class="overlay"></div>
     <header class="flex justify-between align-center paddings">
       <div id="accueil">
-        <a href="#"
-          ><p><span>B-G</span></p></a
-        >
-        <a href="#"
-          ><p><span>Dev</span></p></a
-        >
+        <a href="#">
+          <img src="./images/logo.png" alt="logo" />
+        </a>
         <div class="link-sociaux flex flex-column paddings gap-30">
           <a href="https://www.facebook.com/" target="_blank"
             ><i class="fa-brands fa-facebook"></i
@@ -47,7 +64,7 @@
           <i class="fa-solid fa-xmark"></i>
         </div>
         <ul class="flex gap-30">
-          <li><a href="#accueil">Accueil</a></li>
+          <li><a href="#accueil"></a></li>
           <li><a href="#apropos">À propos</a></li>
           <li><a href="#projet">Mes Projets</a></li>
           <li><a href="#contact">Contact</a></li>
