--- a/index.html
+++ b/index.html
@@ -53,7 +53,9 @@
           <a href="https://github.com/" target="_blank"
             ><i class="fa-brands fa-github"></i
           ></a>
-          <a href="https://www.linkedin.com/feed/" target="_blank"
+          <a
+            href="https://www.linkedin.com/in/belaid-gherbi-309440266/"
+            target="_blank"
             ><i class="fa-brands fa-linkedin"></i
           ></a>
         </div>
