--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       <div class="hero">
         <p>Je suis</p>
         <h1>
-          BELAID GHERBI <br />Developpeur Front-End
+          BELAID GHERBI <br />Developpeur Full Stack
           <i class="fa-solid fa-code"></i>
         </h1>
         <p class="margin-bottom">Junior Software Engineer</p>
