--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
               <a href="#"><strong>Tel :</strong> 06.65.62.19.99</a>
             </address>
           </div>
-          <div>
+          <div class="resau">
             <p class="margin-bottom"><strong>Retrouvez moi sur :</strong></p>
             <div class="flex gap-30 resaux">
               <a href="https://www.facebook.com/?locale=fr_FR" target="_blank"
