--- a/index.html
+++ b/index.html
@@ -106,12 +106,13 @@
           <h2 class="margin-bottom text-center">À Propos</h2>
           <div class="margin-bottom">
             <p>
-              Après une reconversion professionnel dans le monde du dev, j'ai
-              suivi plusieur formation et bootcamp qui m'ont aider a me forgé
-              une expérience pertinante et qui m'ont permit de réaliser quelques
-              projets qui pourront vous intéressez. J'aime intégrer ou imaginer
-              des interfaces modernes, les rendres responsives et les dynamiser
-              avec des animations élégantes.
+              Après une reconversion professionnel dans le domaine de
+              l'informatique je suis devenue passionné par le développement web,
+              j'ai acquis des compétences solides en HTML, CSS et JavaScript.
+              Désireux d'élargir mon expertise, je suis actuellement motivé à
+              apprendre le langage Java pour enrichir mon arsenal de compétences
+              et explorer de nouvelles opportunités dans le développement
+              backend
             </p>
           </div>
 
