--- a/index.html
+++ b/index.html
@@ -299,7 +299,11 @@
                 CSS, et JavaScript avec un Json{}
               </p>
               <p class="copyrigth">© Copyright M'S Sportswear BG Dev</p>
-              <a href="#">Voir le projet</a>
+              <a
+                href="https://belaid01500.github.io/sportswear/"
+                target="_blank"
+                >Voir le projet</a
+              >
             </div>
             <img
               src="./images/M'S Sportswear.png"
