--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <p class="margin-bottom">Junior Software Engineer</p>
         <div class="liens flex gap-30">
           <a href="#apropos">En savoir plus...</a>
-          <a href="./CV-Belaid (1).pdf" target="_blank">Voir mon CV</a>
+          <a href="./Belaid Gherbi (1).pdf" target="_blank">Voir mon CV</a>
         </div>
       </div>
     </div>
