--- a/index.html
+++ b/index.html
@@ -286,7 +286,9 @@
                 et CSS
               </p>
               <p class="copyrigth">© Copyright MNTP BG Dev</p>
-              <a href="#" target="_blank">Voir le projet</a>
+              <a href="https://belaid01500.github.io/MNTP/" target="_blank"
+                >Voir le projet</a
+              >
             </div>
           </div>
           <!-- Card M'S Sportswear -->
